force-app/main/default/objects/Case/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>