force-app/main/default/objects/Case/fields/Service_Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Sub_Type__c</fullName>
    <label>Service Request Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>311 Request</fullName>
            </value>
            <value>
                <fullName>7th Gen iPod (iPod9,1)</fullName>
            </value>
            <value>
                <fullName>Abandoned Bicycle</fullName>
            </value>
            <value>
                <fullName>Abandoned Property</fullName>
            </value>
            <value>
                <fullName>Abandoned Vehicle</fullName>
            </value>
            <value>
                <fullName>Abandoned Vehicle - On Private Property</fullName>
            </value>
            <value>
                <fullName>Abandoned Vehicle - On Public Property</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Aggressive Panhandling</fullName>
            </value>
            <value>
                <fullName>Aided in Arrest</fullName>
            </value>
            <value>
                <fullName>Alleged Shoplifter</fullName>
            </value>
            <value>
                <fullName>Alley</fullName>
            </value>
            <value>
                <fullName>Alley Cleaning</fullName>
            </value>
            <value>
                <fullName>Alley Repair Investigation</fullName>
            </value>
            <value>
                <fullName>Altercation</fullName>
            </value>
            <value>
                <fullName>Ambassador Staff</fullName>
            </value>
            <value>
                <fullName>Animal Related</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Assist Business</fullName>
            </value>
            <value>
                <fullName>Assist Emergency Service</fullName>
            </value>
            <value>
                <fullName>Attraction</fullName>
            </value>
            <value>
                <fullName>Auto Accident</fullName>
            </value>
            <value>
                <fullName>Bag Law Tips (DOEE)</fullName>
            </value>
            <value>
                <fullName>Bar/Nightlife</fullName>
            </value>
            <value>
                <fullName>Beauty</fullName>
            </value>
            <value>
                <fullName>Bicycle Services</fullName>
            </value>
            <value>
                <fullName>Big Belly</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Broken Glass/Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>