force-app/main/default/objects/Case/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <label>Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Horticulture</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>311</fullName>
            </value>
            <value>
                <fullName>Graffiti</fullName>
                <isActive>false</isActive>
                <label>Graffiti</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <isActive>false</isActive>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Incident/Interaction</fullName>
                <isActive>false</isActive>
                <label>Incident/Interaction</label>
            </value>
            <value>
                <fullName>Maintenance Request</fullName>
                <isActive>false</isActive>
                <label>Maintenance Request</label>
            </value>
            <value>
                <fullName>Quality of Life Calls</fullName>
                <isActive>false</isActive>
                <label>Quality of Life Calls</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>